# src/routes/api/comment.route.js
@@ -4,7 +4,6 @@ const router = Router();
 import CommentController from '../../controllers/comment.controller';
 import CommentValidator from '../../validators/comment.validator';
 
-router.post('/comment/new', CommentValidator.validateComment, CommentController.addNewComment);
-router.get('/comments/:movieId', CommentController.getMovieComments)
+router.post('/comment', CommentValidator.validateComment, CommentController.addNewComment);
 
 export default router;
