# src/routes/api/movie.route.js
@@ -5,5 +5,6 @@ import MovieController from '../../controllers/movie.controller';
 
 router.get('/movies', MovieController.getAllMovies);
 router.get('/movie/:id/characters', MovieController.getMovieCharacters)
+router.get('/movie/:id/comments', MovieController.getMovieComments)
 
 export default router;
